etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow tcp 80,443 0.0.0.0/0 any 0.0.0.0/0 Nginx%20Full - in
-A ufw-user-input -p tcp -m multiport --dports 80,443 -j ACCEPT -m comment --comment 'dapp_Nginx%20Full'

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 OpenSSH - in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT -m comment --comment 'dapp_OpenSSH'

### tuple ### deny any any 0.0.0.0/0 any 23.251.32.180 in
-A ufw-user-input -s 23.251.32.180 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 45.61.185.245 in
-A ufw-user-input -s 45.61.185.245 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 134.209.163.226 in
-A ufw-user-input -s 134.209.163.226 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.32.139 in
-A ufw-user-input -s 23.251.32.139 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.130 in
-A ufw-user-input -s 23.251.35.130 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.32.133 in
-A ufw-user-input -s 23.251.32.133 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 148.113.143.77 in
-A ufw-user-input -s 148.113.143.77 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.135 in
-A ufw-user-input -s 23.251.35.135 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.122 in
-A ufw-user-input -s 23.251.35.122 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.118 in
-A ufw-user-input -s 23.251.35.118 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.99 in
-A ufw-user-input -s 23.251.35.99 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.129 in
-A ufw-user-input -s 23.251.35.129 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 57.141.0.29 in
-A ufw-user-input -s 57.141.0.29 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.144 in
-A ufw-user-input -s 23.251.35.144 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.134 in
-A ufw-user-input -s 23.251.35.134 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.137 in
-A ufw-user-input -s 23.251.35.137 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.27 in
-A ufw-user-input -s 23.251.35.27 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.133 in
-A ufw-user-input -s 23.251.35.133 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.32.161 in
-A ufw-user-input -s 23.251.32.161 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 154.23.22.111 in
-A ufw-user-input -s 154.23.22.111 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.112 in
-A ufw-user-input -s 23.251.35.112 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.146 in
-A ufw-user-input -s 23.251.35.146 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.132 in
-A ufw-user-input -s 23.251.35.132 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.32.0/24 in
-A ufw-user-input -s 23.251.32.0/24 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.35.0/24 in
-A ufw-user-input -s 23.251.35.0/24 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 154.23.22.0/24 in
-A ufw-user-input -s 154.23.22.0/24 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 77.221.134.0/24 in
-A ufw-user-input -s 77.221.134.0/24 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 103.189.250.0/24 in
-A ufw-user-input -s 103.189.250.0/24 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 23.251.63.0/24 in
-A ufw-user-input -s 23.251.63.0/24 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 23.251.32.0/24 in
-A ufw-user-input -p tcp --dport 443 -s 23.251.32.0/24 -j DROP
-A ufw-user-input -p udp --dport 443 -s 23.251.32.0/24 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 23.251.32.0/24 in
-A ufw-user-input -p tcp --dport 80 -s 23.251.32.0/24 -j DROP
-A ufw-user-input -p udp --dport 80 -s 23.251.32.0/24 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 23.251.35.0/24 in
-A ufw-user-input -p tcp --dport 80 -s 23.251.35.0/24 -j DROP
-A ufw-user-input -p udp --dport 80 -s 23.251.35.0/24 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 23.251.35.0/24 in
-A ufw-user-input -p tcp --dport 443 -s 23.251.35.0/24 -j DROP
-A ufw-user-input -p udp --dport 443 -s 23.251.35.0/24 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 154.23.22.0/24 in
-A ufw-user-input -p tcp --dport 443 -s 154.23.22.0/24 -j DROP
-A ufw-user-input -p udp --dport 443 -s 154.23.22.0/24 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 154.23.22.0/24 in
-A ufw-user-input -p tcp --dport 80 -s 154.23.22.0/24 -j DROP
-A ufw-user-input -p udp --dport 80 -s 154.23.22.0/24 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 77.221.134.0/24 in
-A ufw-user-input -p tcp --dport 80 -s 77.221.134.0/24 -j DROP
-A ufw-user-input -p udp --dport 80 -s 77.221.134.0/24 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 77.221.134.0/24 in
-A ufw-user-input -p tcp --dport 443 -s 77.221.134.0/24 -j DROP
-A ufw-user-input -p udp --dport 443 -s 77.221.134.0/24 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 103.189.250.0/24 in
-A ufw-user-input -p tcp --dport 443 -s 103.189.250.0/24 -j DROP
-A ufw-user-input -p udp --dport 443 -s 103.189.250.0/24 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 103.189.250.0/24 in
-A ufw-user-input -p tcp --dport 80 -s 103.189.250.0/24 -j DROP
-A ufw-user-input -p udp --dport 80 -s 103.189.250.0/24 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 23.251.63.0/24 in
-A ufw-user-input -p tcp --dport 80 -s 23.251.63.0/24 -j DROP
-A ufw-user-input -p udp --dport 80 -s 23.251.63.0/24 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 23.251.63.0/24 in
-A ufw-user-input -p tcp --dport 443 -s 23.251.63.0/24 -j DROP
-A ufw-user-input -p udp --dport 443 -s 23.251.63.0/24 -j DROP

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
